--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/test-utils": "3.21.0",
     "@nuxt/ui": "4.3.0",
     "@nuxtjs/i18n": "^10.2.1",
+    "@pinia/nuxt": "^0.11.3",
     "eslint": "^9.39.2",
     "mongoose": "^9.0.2",
     "nuxt": "^4.2.2",
@@ -26,6 +27,8 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@iconify-json/heroicons": "^1.2.3",
+    "@iconify-json/lucide": "^1.2.82",
     "@types/node": "^25.0.3"
   }
 }
